--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Elanto",
+  "name": "testproject",
   "version": "1.0.0",
-  "description": "Website template for Payload",
+  "description": "Website for TestProject",
   "license": "MIT",
   "type": "module",
   "scripts": {
@@ -63,7 +63,8 @@
     "react-icons": "^5.5.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@huce-digital/sample-block": "latest"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
